# Learn-Rust-by-Building-Real-Applications

./: Cargo.toml  LICENSE  README.md
mars_calc/: Cargo.toml
mars_calc/src/: main.rs
memory_management/: Cargo.toml
memory_management/src/: main.rs
server/: Cargo.toml
server/public/: hello.html  index.html
server/src/: main.rs  server.rs  website_handler.rs
server/src/http/: method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
server/tests/: integ_test.rs
