[package]
name = "server"
version = "0.1.0"
authors = ["gavadinov <gavadinov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
assert_cmd = "1.0"
reqwest = { version = "0.10", features = ["blocking"]}
